Add @NotNull validation for age fields and improve test code quality
Co-authored-by: krmayank01 <98836608+krmayank01@users.noreply.github.com>